--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "express": "^5.0.0-alpha.8",
         "inflection": "^1.12.0",
         "mongoose": "^5.9.28",
-        "multer": "^1.4.2"
+        "multer": "^1.4.2",
+        "require-all": "^3.0.0"
     }
 }
